[package]
name = "ch_E_ap"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite ="^0.26.0"
rocket = { version = "0.5.0-rc.1", features = ["secrets", "tls", "json"] }
urlencoding = "^2.0.0"
rand = "^0.8.5"
lazy_static = "^1.4.0"
