[package]
name = "ch_E_ap"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["secrets", "tls", "json"] }
mysql = "^17.0.0"
urlencoding = "^2.0.0"
rand = "^0.8.5"
lazy_static = "^1.4.0"
time = "^0.2.25"
cookie = "^0.16.0"

# r_crypt depedencies
ssh-key = { version = "^0.4" , features = ["ed25519","ecdsa","rsa","encryption","alloc"] }
rand_core = { version = "^0.6" , features = ["getrandom"] }
base64ct = { version = "^1.5.0" , features = ["alloc"] }
ed25519-dalek = "^1.0.1"
#

# wasm depedencies
wasm-bindgen = "^0.2.80"
js-sys = "^0.3.57"
getrandom = { version = "^0.2.6" , features = ["js"] }
#


[lib]
crate-type = ["cdylib"]